fix: Contact form textare not showing correctly in dark mode

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -28,7 +28,7 @@
         color: #e2e8f0;
     }
 
-    input.text-gray-700{
+    input.text-gray-700, textarea.text-gray-700 {
         color: #e2e8f0;
     }
 
